--- a/ui/src/components/header/header.css
+++ b/ui/src/components/header/header.css
@@ -1,6 +1,10 @@
-.pf-c-page__header-tools-item span{
-    margin-right: '1em';
+.pf-c-page__header-tools-item span {
+  margin-right: '1em';
 
-    font-weight: 'bold';
-    font-size: '1em';
+  font-weight: 'bold';
+  font-size: '1em';
+}
+
+.pf-c-page__header-tools {
+  grid-column: 2/4;
 }
