--- a/ui/src/components/Filter/Filter.css
+++ b/ui/src/components/Filter/Filter.css
@@ -1,10 +1,14 @@
 .filter {
-  margin: 3em;
+  margin-left: 3em;
+  margin-top: 1em;
 }
 .foo {
-  width: 10em;
+  width: 7em;
 }
 .foobar {
-  padding-left: 0.7em;
-  margin-top: 0.5em;
+  margin-top: 0.0em;
+}
+
+.pf-c-check__label {
+  color: rgb(0, 0, 0);
 }
