Add LeftPane Component for the Dashboard
The following patch contains the components that needs to be included in the left pane of the dashboard
- CatalogFilter
- KindFilter
- SortByFilter
- LeftPane

Signed-off-by: vinamra28 <vinjain@redhat.com>

--- a/ui/src/components/Filter/Filter.css
+++ b/ui/src/components/Filter/Filter.css
@@ -1,11 +1,12 @@
 .Filter {
-  margin: 3em;
+  margin-left: 1.5em;
+  margin-top: 1em;
 }
 
 .Text-Header {
-  width: 10em;
+  width: 7em;
 }
 
-.Checkboxes {
-  padding-left: 0.7em;
+.pf-c-check__label {
+  color: rgb(0, 0, 0);
 }
