UI: Adds layout for Homepage
This patch includes following component to create Homepage layout
- Header
- Footer
- SearchBar
- Resources for rendering resources
- Details for rendering resource detail
- BackGround for Homepage banner

Signed-off-by: Shiv Verma <shverma@redhat.com>

--- a/ui/src/components/Filter/Filter.css
+++ b/ui/src/components/Filter/Filter.css
@@ -1,12 +1,7 @@
-.Filter {
-  margin-left: 1.5em;
-  margin-top: 1em;
-}
-
-.Text-Header {
-  width: 7em;
-}
-
 .pf-c-check__label {
   color: rgb(0, 0, 0);
+}
+.hub-header {
+  font-weight: bold;
+  padding-top: 0.3em;
 }
